--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 
 @font-face {
   font-family: "DinoPro";
-  src: url("/font/DINPro.otf") format("opentype");
+  src: url("/font/DINPro-Bold.otf") format("opentype");
   font-weight: bold;
   font-style: normal;
 }
@@ -23,7 +23,6 @@ body {
 .bg-image {
   background-image: url("/assets/dots_t.png");
   background-repeat: no-repeat;
-  background-position: center;
 }
 
 .bg-image-pixels {
