updated scroll and squished

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,10 @@ body {
 
 .bg-image {
   background-image: url("/assets/dots_t.png");
-  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-position: center center;
+  z-index: 10;
 }
 
 .bg-image-pixels {
